Fix line below wave element. thinner scrollbar.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,8 +22,8 @@ a {
 
 /* width */
 ::-webkit-scrollbar {
-  width: 16px;
-  height: 16px;
+  width: 14px;
+  height: 14px;
 }
 
 /* Track */
